Fixing comments
(cherry picked from commit 17e06245f0a5e6061ade36dd5fc1f3e6c9bf8845)